# Light-linked-list

./: CMakeLists.txt  README.md  main.cpp
app/: LCommon.h  LConfig.h
app/include/: LCommon.h  LConfig.h  LShader.h  LUtils.h  root_directory.h
app/src/: LShader.cpp  LUtils.cpp  basicLighting.cpp  blending.cpp  blending_light.cpp  blending_sorted.cpp  generaltest.cpp  main.cpp  model_light.cpp  model_loading.cpp  multiple_lights.cpp
doc/: gg.txt
include/: utils.h
res/: InitShader.h  fseek.cpp
res/shaders/: blending_sorted.fs  model_loading.fs  multiple_lights.fs
res/shaders/basicLighting/: basic_lighting.fs
src/: utils.cpp
